--- a/release-notes/index.html
+++ b/release-notes/index.html
@@ -30,6 +30,14 @@
         <hr>
          <div class="row marketing">
             <div class="col-sm-12">
+                <h3>Podcast Chapters 2.1.0 <small>Released March 9th, 2020</small></h3>
+                <ul>
+                    <li>2.0 had a nasty bug which could cause a crash when you tried to save, if the MP3 file contained comments. This version fixes that bug. The problem points toward some more work needing to be done around comments, but we can't sit around crashing while it happens. Fix first, then polish. Thanks for all the great problem reports [@MisterDavidK](https://twitter.com/MisterDavidK), [@DavoCaddy](https://twitter.com/DavoCaddy), and Miller Krause!</li>
+                </ul>
+            </div>
+        </div>
+         <div class="row marketing">
+            <div class="col-sm-12">
                 <h3>Podcast Chapters 2.0.0 <small>Released March 1, 2020</small></h3>
                 <ul>
                     <li>Espisode descriptions are back, enabling you to enter as long or as short a description as you like. (Emoji work too 🎉)</li>
