--- a/faq/index.html
+++ b/faq/index.html
@@ -39,12 +39,13 @@
             </div>
             <div class="col-sm-12">
                 <h3>Can I add other podcast metadata in Podcast Chapters?</h3>
-                <p>As of Podcast Chapters 1.2, you can now set the following non-chapter metadata in your podcasts:</p>
+                <p>As of Podcast Chapters 2.0, you can set the following non-chapter metadata in your podcasts:</p>
                 <ul>
                     <li>Podcast title</li>
                     <li>Podcast authors</li>
                     <li>Podcast artwork</li>
                     <li>Episode title</li>
+                    <li>Episode description</li>
                 </ul>
                 <p>Podcast Chapters also preserves any other ID3 v.2.3 metadata present in the file, so if you like you can use any other tool to add further metadata.</p>
             </div>
@@ -63,6 +64,10 @@
             <div class="col-sm-12">
                 <h3>What happened to Thomas Pritchard?</h3>
                 <p>Podcast Chapters was created and developed by Thomas Pritchard from 2016 to March 2019, when he handed charge of the app over to Fredrik Björeman. I (hello!) have lent a hand with the last few releases, and I look forward to keep things going in very much the same style as before. You can read a bit more <a href="https://bjoreman.com/thoughts/adoptingPodcastChapters.html">over here</a>, if you like.</p>
+            </div>
+            <div class="col-sm-12">
+                <h3>What is JSON export, and how does it work?</h3>
+                <p><a href="jsonExport.html">Here's a separate page about the JSON export</a>.</p>
             </div>
             <div class="col-sm-12">
                 <h3>I have another question that's not answered here.</h3>
