--- a/faq/jsonExport.html
+++ b/faq/jsonExport.html
@@ -29,7 +29,7 @@
         <div class="row marketing">
             <div class="col-sm-12">
                 <h3>What is the JSON export feature?</h3>
-                <p>The JSON export is new in Podcast Chapters 2.X. You can find it in the <b>Podcast</b> menu. When you export, information about your podcast episode is written in a standard JSON file into the folder you choose. Additionally, any artwork in your episode is also written to separate image files and refered to in the JSON data.</p>
+                <p>The JSON export is new in Podcast Chapters 2.2. You can find it in the <b>Podcast</b> menu. When you export, information about your podcast episode is written in a standard JSON file into the folder you choose. Additionally, any artwork in your episode is also written to separate image files and refered to in the JSON data.</p>
             </div>
             <div class="col-sm-12">
                 <h3>What can I use this for?</h3>
@@ -41,7 +41,7 @@
                 <h3>Do you have an example?</h3>
                 <p>Why, yes, I do. If you check the box <b>"Also create web player page"</b>, Podcast Chapters will generate a HTML page (along with separate CSS and Javascript files) with a standards based audio player, complete with chapter support, artwork display and playback speed. <a href="https://www.bjoreman.com/test/player.html">Here's an example page.</a></p>
                 <p>You can upload the created files (podcast.js, any artwork images, player.html, player.css, and player.js) straight to a web server and use to let people listen to your podcast. You can also, of course, change the files any way you like to suit your needs.</p>
-                <p>For example, if you host your finished podcast files on a service such as Libsyn, you can change either the src property of the player, or the file name in podcast.js to point to Libsyn instead of a file in the same directory. This way, your download and listening stats will be collected as usual.</p>
+                <p>For example, if you host your finished podcast files on a service such as Libsyn, you can change either the src property of the player, or the file name in podcast.js to point to Libsyn instead of a file in the same directory. If you link the player to Libsyn or some other host, your download and listening stats will be gathered as usual.</p>
                 <p>Another customization is of course to change the style to reflect your own site. Just alter - or throw away - player.css in any way you like. Everything is hopefully pretty basic. If not, <a href="mailto:contact@bjoreman.com">please tell me</a> what I can improve!</p>
                 <p>The generated player reads all information from podcast.js, so you can re-use the same one as much as you like. podcast.js has the exact same contents as podcast.json, but wrapped up in a way which makes it easier to use with Javascript on a web page.</p>
             </div>      
