--- a/release-notes/index.html
+++ b/release-notes/index.html
@@ -29,8 +29,17 @@
         </div>
         <hr>
          <div class="row marketing">
+                        <div class="col-sm-12">
+                <h3>Podcast Chapters 2.2.0 <small>Released April 21, 2020</small></h3>
+                <ul>
+                    <li><a href="../faq/jsonExport.html">Export to JSON</a></li>
+                    <li>Fixed a bug where Podcast Chapters wouldn't let you pick an image with the extension .jpeg as chapter or podcast artwork, unless you dragged and dropped it. Thanks <a href="https://twitter.com/presentastico">@presentástico</a> for reporting the problem!</li>
+                    <li>Improved the code for keeping track of the current playback time a bit</li>
+                    <li>You can swipe chapters in the main list to the left to delete them. (And presets in the presets manager too, if you happen to be working with those a lot)</li>
+                </ul>
+            </div>
             <div class="col-sm-12">
-                <h3>Podcast Chapters 2.1.0 <small>Released March 9th, 2020</small></h3>
+                <h3>Podcast Chapters 2.1.0 <small>Released March 9, 2020</small></h3>
                 <ul>
                     <li>2.0 had a nasty bug which could cause a crash when you tried to save, if the MP3 file contained comments. This version fixes that bug. The problem points toward some more work needing to be done around comments, but we can't sit around crashing while it happens. Fix first, then polish. Thanks for all the great problem reports [@MisterDavidK](https://twitter.com/MisterDavidK), [@DavoCaddy](https://twitter.com/DavoCaddy), and Miller Krause!</li>
                 </ul>
