--- a/release-notes/index.html
+++ b/release-notes/index.html
@@ -29,7 +29,20 @@
         </div>
         <hr>
          <div class="row marketing">
-                        <div class="col-sm-12">
+            <div class="col-sm-12">
+                <h3>Podcast Chapters 2.3.0 <small>Released May 1, 2020</small></h3>
+                <ul>
+                    <li>More keyboard shortcuts!
+                        <ul>
+                            <li>⌘T focuses the chapter title text field</li>
+                            <li>⌘U focuses the chapter URL field</li>
+                            <li>⌥⇧⌘1 to 0 jumps to the first ten chapters (0 is 10 in this case).</li>
+                        </ul>
+                        Thanks to <a href="https://twitter.com/tjluoma">TJ Luoma</a> for the suggestions!<br/>
+                        (Wonder how to find shortcuts? They're all listed up in the menus at the top of the screen.)</li>
+                </ul>
+            </div>
+            <div class="col-sm-12">
                 <h3>Podcast Chapters 2.2.0 <small>Released April 21, 2020</small></h3>
                 <ul>
                     <li><a href="../faq/jsonExport.html">Export to JSON</a></li>
