--- a/release-notes/index.html
+++ b/release-notes/index.html
@@ -30,6 +30,12 @@
         <hr>
          <div class="row marketing">
             <div class="col-sm-12">
+                <h3>Podcast Chapters 2.3.1<small>Released May 14, 2020</small></h3>
+                <ul>
+                    <li>Fixed a problem with the keyboard shortcuts for going to the previous and next chapters. If you combined them with clicking in the main chapter list, the results could be very confusing. The reason was that clicking the list did't update the playback position (as can be seen at the bottom of the window), while the shortcuts looked at the playback position to figure out where to go next. Now, clicking in the list also sets the playback position, simple as that. Big thanks, once more, to <a href="https://twitter.com/tjluoma">TJ Luoma</a> for the problem report!</li>
+                </ul>
+            </div>
+            <div class="col-sm-12">
                 <h3>Podcast Chapters 2.3.0 <small>Released May 1, 2020</small></h3>
                 <ul>
                     <li>More keyboard shortcuts!
