Save before commit to get everything included …

--- a/faq/index.html
+++ b/faq/index.html
@@ -29,7 +29,7 @@
         <div class="row marketing">
             <div class="col-sm-12">
                 <h3>What podcast clients can I view MP3 chapter markers in?</h3>
-                <p>MP3 chapter markers are supported by most podcast clients, including <a href="https://www.apple.com/itunes/podcasts/">Apple Podcasts on iOS</a> (provided <a href="https://twitter.com/tpritc/status/1004336257651134464">you're on iOS 12</a>), <a href="https://overcast.fm">Overcast</a>, <a href="https://www.pocketcasts.com/">Pocket Casts</a>, <a href="https://antennapod.org">Antennapod</a> <a href="http://supertop.co/castro/">Castro</a>, <a href="https://www.pocketcasts.com/">Player FM</a> and more.</p>
+                <p>MP3 chapter markers are supported by most podcast clients, including <a href="https://www.apple.com/itunes/podcasts/">Apple Podcasts on iOS</a> (provided <a href="https://twitter.com/tpritc/status/1004336257651134464">you're on iOS 12</a>), <a href="https://overcast.fm">Overcast</a>, <a href="https://www.pocketcasts.com/">Pocket Casts</a>, <a href="https://antennapod.org">Antennapod</a> <a href="http://supertop.co/castro/">Castro</a>, <a href="https://www.player.fm">Player FM</a> and more.</p>
                 <p>You can get an idea of the podcast clients that support MP3 chapter markers using <a href="https://docs.google.com/spreadsheets/d/1c2L14UVH1xtN4iDG4awheLbMgPCQgaKEamUauWs1gps/edit#gid=0">this spreadsheet</a> (you'll want column W). Please note it's not entirely up-to-date, with MP3 chapter markers quickly gaining adoption across the spectrum of podcast clients.</p>
             </div>
             <div class="col-sm-12">
