--- a/release-notes/index.html
+++ b/release-notes/index.html
@@ -29,6 +29,12 @@
         </div>
         <hr>
          <div class="row marketing">
+                        <div class="col-sm-12">
+                <h3>Podcast Chapters 2.4.1<small>Released May 29, 2020</small></h3>
+                <ul>
+                    <li>Fixed a second bug causing invalid chapter information to be written, ruining the day in some podcast players.</li>
+                </ul>
+            </div>
             <div class="col-sm-12">
                 <h3>Podcast Chapters 2.4.0<small>Released May 24, 2020</small></h3>
                 <ul>
