--- a/release-notes/index.html
+++ b/release-notes/index.html
@@ -29,7 +29,13 @@
         </div>
         <hr>
          <div class="row marketing">
-                        <div class="col-sm-12">
+            <div class="col-sm-12">
+                <h3>Podcast Chapters 2.5<small>Released June 23, 2020</small></h3>
+                <ul>
+                    <li>Does your podcast have more than 256 chapters? No? Well, if you ever do create one, Podcast Chapters will no longer crash trying to save the file. Big thanks to <a href="https://twitter.com/getraf">@getraf</a> for the excellent problem report!</li>
+                </ul>
+            </div>
+            <div class="col-sm-12">
                 <h3>Podcast Chapters 2.4.1<small>Released May 29, 2020</small></h3>
                 <ul>
                     <li>Fixed a second bug causing invalid chapter information to be written, ruining the day in some podcast players.</li>
