--- a/release-notes/index.html
+++ b/release-notes/index.html
@@ -30,6 +30,12 @@
         <hr>
          <div class="row marketing">
             <div class="col-sm-12">
+                <h3>Podcast Chapters 2.6<small>Released July 28, 2020</small></h3>
+                <ul>
+                    <li>Podcast Chapters can now accept import of podcast data from  <a href="https://en.wikipedia.org/wiki/Comma-separated_values">CSV files</a>, including episode descriptions, chapters, and images. <a href="../faq/csvImport.html">Here's more information on the format.</a></li>
+                </ul>
+            </div>
+            <div class="col-sm-12">
                 <h3>Podcast Chapters 2.5<small>Released June 23, 2020</small></h3>
                 <ul>
                     <li>Does your podcast have more than 256 chapters? No? Well, if you ever do create one, Podcast Chapters will no longer crash trying to save the file. Big thanks to <a href="https://twitter.com/getraf">@getraf</a> for the excellent problem report!</li>
