--- a/faq/index.html
+++ b/faq/index.html
@@ -55,7 +55,8 @@
             </div>
             <div class="col-sm-12">
                 <h3>Can I import markers from [some format]?</h3>
-                <p>Podcast Chapters 1.2 supports importing chapter markers from <code>cue</code> files. You can import markers using the menu, by selecting 'Import Chapters...' from the 'Chapter' menu, and selecting a <code>cue</code> file.</p>
+                <p>Podcast Chapters supports import of from <a href="https://en.wikipedia.org/wiki/Comma-separated_values">CSV files</a>. You can import either by dragging and dropping the file on Podcast Chapters, or by using the menu option "Import Chapter Markers ..." int the "Chapter" menu. More  <a href="csvImport.html">information on the CSV format can be found here</a>.</p>
+                <p>Podcast Chapters also supports importing chapter markers from <code>cue</code> files. You can import markers using the menu, by selecting "Import Chapter Markers ..." from the "Chapter" menu, and selecting a <code>cue</code> file.</p>
                 <br>
                 <img src="../images/faq/import-cue.png" width="100%">
                 <br><br>
