--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             </div>
             <div class="visible-xs"><br></div>
             <div class="col-sm-6">
-                               <h4>Native to the Mac</h4>
+                <h4>Native to the Mac</h4>
                 <p>No uploading, using a clunky web interface, and re-downloading. Podcast Chapters is designed for the Mac you use and love, by someone who uses and loves it too.</p></div>
         </div>
         <div class="row marketing">
@@ -67,6 +67,12 @@
             <div class="col-sm-6">
                 <h4>Power-User Features</h4>
                 <p>Do you edit multiple podcasts? Save time with the presets system in Podcast Chapters. Save your shows with pre-set metadata, including the show art. Never spend hours searching for that one image file again.</p>
+            </div>
+        </div>
+         <div class="row marketing">
+            <div class="col-sm-6">
+                <h4>Import And Export</h4>
+                <p>Import podcast data from automation-friendly <a href="./faq/csvImport.html">CSV files</a>. <a href="./faq/jsonExport.html">Export data as JSON</a>, including a web player if you so wish.</p>
             </div>
         </div>
 
