--- a/release-notes/index.html
+++ b/release-notes/index.html
@@ -30,6 +30,12 @@
         <hr>
          <div class="row marketing">
             <div class="col-sm-12">
+                <h3>Podcast Chapters 2.6.1<small>Released August 7, 2020</small></h3>
+                <ul>
+                    <li>Fixed a bug with the CSV import: if the times were given as minutes and seconds - instead of hours, minutes, and seconds - they would not be set in the imported chapters. Thanks to once again to <a href="https://twitter.com/tjluoma">TJ Luoma</a> for reporting the problem!</li>
+                </ul>
+            </div>
+            <div class="col-sm-12">
                 <h3>Podcast Chapters 2.6<small>Released July 28, 2020</small></h3>
                 <ul>
                     <li>Podcast Chapters can now accept import of podcast data from  <a href="https://en.wikipedia.org/wiki/Comma-separated_values">CSV files</a>, including episode descriptions, chapters, and images. <a href="../faq/csvImport.html">Here's more information on the format.</a></li>
