--- a/release-notes/index.html
+++ b/release-notes/index.html
@@ -30,6 +30,11 @@
         <hr>
          <div class="row marketing">
             <div class="col-sm-12">
+                <h3>Podcast Chapters 2.6.2<small>Released August 9, 2020</small></h3>
+                <ul>
+                    <li>Fixed a bug where Podcast Chapters would crash on export if there was no podcast artwork. Also prevented CSV import from being able to replace the current podcast artwork with nothing (which could cause the crash). Thanks once more to <a href="https://twitter.com/tjluoma">TJ Luoma</a> for a great problem report.</li>
+                </ul>
+            <div class="col-sm-12">
                 <h3>Podcast Chapters 2.6.1<small>Released August 7, 2020</small></h3>
                 <ul>
                     <li>Fixed a bug with the CSV import: if the times were given as minutes and seconds - instead of hours, minutes, and seconds - they would not be set in the imported chapters. Thanks to once again to <a href="https://twitter.com/tjluoma">TJ Luoma</a> for reporting the problem!</li>
