--- a/release-notes/index.html
+++ b/release-notes/index.html
@@ -30,10 +30,17 @@
         <hr>
          <div class="row marketing">
             <div class="col-sm-12">
+                <h3>Podcast Chapters 2.7<small>Released November 2, 2020</small></h3>
+                <ul>
+                    <li>This version adds support for export to <a href="https://github.com/Podcastindex-org/podcast-namespace/blob/main/chapters/jsonChapters.md">JSON chapters format</a>, a new standard for describing podcast chapters in JSON form. A checkbox has been added to the export options, right above the option to generate a web player. The new format is very similar to the old one, but there are differences so anything consuming the exported JSON will need to be changed to use the new format. Therefore, the old format remains the default for now. As the format is so new, the box will need to be checked each time. If everything proceeds as expected with the standard and it gains wider adoption, I expect the new format to eventually replace the old one.</li>
+                </ul>
+            </div>
+            <div class="col-sm-12">
                 <h3>Podcast Chapters 2.6.2<small>Released August 9, 2020</small></h3>
                 <ul>
                     <li>Fixed a bug where Podcast Chapters would crash on export if there was no podcast artwork. Also prevented CSV import from being able to replace the current podcast artwork with nothing (which could cause the crash). Thanks once more to <a href="https://twitter.com/tjluoma">TJ Luoma</a> for a great problem report.</li>
                 </ul>
+            </div>
             <div class="col-sm-12">
                 <h3>Podcast Chapters 2.6.1<small>Released August 7, 2020</small></h3>
                 <ul>
