Late 2.8 release notes.

--- a/release-notes/index.html
+++ b/release-notes/index.html
@@ -23,12 +23,19 @@
                 <br><br>
             </div>
             <div class="col-xs-12">
-                <p>Thanks for purchasing Podcast Chapters, I really appreciate your support, and I hope you've found it useful so far! I'll be releasing updates here and there to add features and fix bugs. You can find a list of the changes so far on this page.</p>
+                <p>Thanks for using Podcast Chapters, I really appreciate your support, and I hope you've found it useful so far! I'll be releasing updates here and there to add features and fix bugs. You can find a list of the changes so far on this page.</p>
                 <p><a href="../index.html">← Return to Podcast Chapters</a></p>
             </div>
         </div>
         <hr>
          <div class="row marketing">
+            <div class="col-sm-12">
+                <h3>Podcast Chapters 2.8<small>Released January 4, 2021</small></h3>
+                <ul>
+                    <li>Support for dragging and dropping chapter artwork straight to chapters in the main chapter list - no need to select the chapter first!</li>
+                    <li>Podcast Chapter is now a native app on M1-based Macs, and on Big Sur</li>
+                </ul>
+            </div>
             <div class="col-sm-12">
                 <h3>Podcast Chapters 2.7<small>Released November 2, 2020</small></h3>
                 <ul>
