--- a/index.html
+++ b/index.html
@@ -20,9 +20,11 @@
             <h1>Podcast Chapters</h1>
             <p class="lead">Want to make it easy for your listeners to tap directly through to sponsors? Skip over spoilers if they aren’t caught up? See what’s coming up in your episode? Let Podcast Chapters help.</p>
             <br>
-            <a target="_blank" href="https://itunes.apple.com/us/app/chapters-best-way-to-add-chapter/id1070963477?ls=1&mt=12">
+            <p><a target="_blank" href="https://itunes.apple.com/us/app/chapters-best-way-to-add-chapter/id1070963477?ls=1&mt=12">
                 <img src="images/download-on-mas.png" alt="Download on the Mac App Store" width="165px" height="40px" />
-            </a>
+            </a></p>
+            <br>
+            <p>Podcast Chapters is free for up to five chapters. Try it out, use it for as many podcasts as you like. If you need more than five chapters, or just enjoy the app and want to support it, unlocking unlimited chapters is a one-time in-app purchase.
         </div>
 
         <hr><br>
