--- a/release-notes/index.html
+++ b/release-notes/index.html
@@ -30,6 +30,13 @@
         <hr>
          <div class="row marketing">
             <div class="col-sm-12">
+                <h3>Podcast Chapters 2.9<small>Released February 20, 2021</small></h3>
+                <ul>
+                    <li>Podcast Chapters is now FREE with all functionality enabled for up to five chapters. If you want more than five chapters, or just want to support the app, unlocking unlimited chapters is a one-time in-app purchase of the same price as the app used to be. Everyone who has already bought the app of course has it unlocked and fully enabled from the start.</li>
+                    <li>Oh yeah, made the app a bit better at saving window positions and column widths (mainly in the metadata window)</li>
+                </ul>
+            </div>
+            <div class="col-sm-12">
                 <h3>Podcast Chapters 2.8<small>Released January 4, 2021</small></h3>
                 <ul>
                     <li>Support for dragging and dropping chapter artwork straight to chapters in the main chapter list - no need to select the chapter first!</li>
