--- a/release-notes/index.html
+++ b/release-notes/index.html
@@ -30,6 +30,12 @@
         <hr>
          <div class="row marketing">
             <div class="col-sm-12">
+                <h3>Podcast Chapters 2.9.1<small>Released February 21, 2021</small></h3>
+                <ul>
+                    <li>Restoring purchases - which you can find in the app menu, just above preferences - was a process giving very little feedback, especially if you had bought a previous version. Worse, it sometimes looked as if you were still using the free version, even though you had paid and unlimited chapters was actually unlocked! This small fix should resolve that, by both providing some more messages, and making sure the interface updates properly when you have already paid.</li>
+                </ul>
+            </div>
+            <div class="col-sm-12">
                 <h3>Podcast Chapters 2.9<small>Released February 20, 2021</small></h3>
                 <ul>
                     <li>Podcast Chapters is now FREE with all functionality enabled for up to five chapters. If you want more than five chapters, or just want to support the app, unlocking unlimited chapters is a one-time in-app purchase of the same price as the app used to be. Everyone who has already bought the app of course has it unlocked and fully enabled from the start.</li>
