--- a/release-notes/index.html
+++ b/release-notes/index.html
@@ -30,6 +30,18 @@
         <hr>
          <div class="row marketing">
             <div class="col-sm-12">
+                <h3>Podcast Chapters 2.9.3<small>Released March 14, 2021</small></h3>
+                <ul>
+                    <li>In a fun twist to the last version, fixed an issue where some users got the full feature set unlocked without having paid.</li>
+                </ul>
+            </div>
+            <div class="col-sm-12">
+                <h3>Podcast Chapters 2.9.2<small>Released February 24, 2021</small></h3>
+                <ul>
+                    <li>Fixed an issue where some users who had bought the for-pay versions of the app didn't get the full feature set unlocked properly.</li>
+                </ul>
+            </div>
+            <div class="col-sm-12">
                 <h3>Podcast Chapters 2.9.1<small>Released February 21, 2021</small></h3>
                 <ul>
                     <li>Restoring purchases - which you can find in the app menu, just above preferences - was a process giving very little feedback, especially if you had bought a previous version. Worse, it sometimes looked as if you were still using the free version, even though you had paid and unlimited chapters was actually unlocked! This small fix should resolve that, by both providing some more messages, and making sure the interface updates properly when you have already paid.</li>
