--- a/release-notes/index.html
+++ b/release-notes/index.html
@@ -32,13 +32,13 @@
             <div class="col-sm-12">
                 <h3>Podcast Chapters 2.9.3<small>Released March 14, 2021</small></h3>
                 <ul>
-                    <li>In a fun twist to the last version, fixed an issue where some users got the full feature set unlocked without having paid.</li>
+                    <li>In a fun twist to the last version, fixed a bug where some users got the full feature set unlocked without having paid. Thanks to <a href="https://twitter.com/yopowertime">@yopowertime</a> for reporting the problem!</li>
                 </ul>
             </div>
             <div class="col-sm-12">
                 <h3>Podcast Chapters 2.9.2<small>Released February 24, 2021</small></h3>
                 <ul>
-                    <li>Fixed an issue where some users who had bought the for-pay versions of the app didn't get the full feature set unlocked properly.</li>
+                    <li>Fixed a bug where some users who had bought the for-pay versions of the app didn't get the full feature set unlocked properly.</li>
                 </ul>
             </div>
             <div class="col-sm-12">
