--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
 
     <div class="container">
         <div class="jumbotron">
-            <img src="images/screenshot-layout-4.png" width="100%" />
+            <img class="light" src="images/kodsnack-light.png" width="100%" />
+            <img class="dark" src="images/kodsnack-dark.png" width="100%" />
             <h1>Podcast Chapters</h1>
             <p class="lead">Want to make it easy for your listeners to tap directly through to sponsors? Skip over spoilers if they aren’t caught up? See what’s coming up in your episode? Let Podcast Chapters help.</p>
             <br>
@@ -24,7 +25,7 @@
                 <img src="images/download-on-mas.png" alt="Download on the Mac App Store" width="165px" height="40px" />
             </a></p>
             <br>
-            <p>Podcast Chapters is free for up to five chapters. Try it out, use it for as many podcasts as you like. If you need more than five chapters, or just enjoy the app and want to support it, unlocking unlimited chapters is a one-time in-app purchase.
+            <p>Podcast Chapters is free for up to three chapters. Try it out, use it for as many podcasts as you like. If you need more than three chapters, or just enjoy the app and want to support it, unlocking unlimited chapters is a one-time in-app purchase.
         </div>
 
         <hr><br>
@@ -115,7 +116,7 @@
         <br><hr>
 
         <footer class="footer">
-            <p>&copy; 2020 <a href="https://bjoreman.com">Fredrik Björeman</a></p>
+            <p>&copy; 2021 <a href="https://bjoreman.com">Fredrik Björeman</a></p>
             <p><a href="https://twitter.com/bjoreman">@bjoreman</a></p>
             <p><a href="faq/index.html">Frequently Asked Questions</a></p>
             <p><a href="release-notes/index.html">Release Notes</a></p>
