--- a/release-notes/index.html
+++ b/release-notes/index.html
@@ -30,6 +30,12 @@
         <hr>
          <div class="row marketing">
             <div class="col-sm-12">
+                <h3>Podcast Chapters 2.9.4<small>Released March 19, 2021</small></h3>
+                <ul>
+                    <li>The preset manager window has gained a button, in the top-right, to apply the selected preset to the current podcast. It seemed strange to have a preset manager which couldn't actually do this, especially not when you invoke it as a separate window.</li>
+                </ul>
+            </div>
+            <div class="col-sm-12">
                 <h3>Podcast Chapters 2.9.3<small>Released March 14, 2021</small></h3>
                 <ul>
                     <li>In a fun twist to the last version, fixed a bug where some users got the full feature set unlocked without having paid. Thanks to <a href="https://twitter.com/yopowertime">@yopowertime</a> for reporting the problem!</li>
