--- a/release-notes/index.html
+++ b/release-notes/index.html
@@ -30,6 +30,12 @@
         <hr>
          <div class="row marketing">
             <div class="col-sm-12">
+                <h3>Podcast Chapters 3.0<small>Released April 04, 2021</small></h3>
+                <ul>
+                    <li>Podcast Chapters is now Podcasting 2.0 certified! Use the new window "RSS Tags" to generate metadata for your RSS feed following the <a href="https://github.com/Podcastindex-org/podcast-namespace/blob/main/docs/1.0.md">podcast namespace</a> specification. <a href="../faq/pc20.html">Read more here</a>.</li>
+                </ul>
+            </div>
+            <div class="col-sm-12">
                 <h3>Podcast Chapters 2.9.4<small>Released March 19, 2021</small></h3>
                 <ul>
                     <li>The preset manager window has gained a button, in the top-right, to apply the selected preset to the current podcast. It seemed strange to have a preset manager which couldn't actually do this, especially not when you invoke it as a separate window.</li>
