--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
         </div>
         <div class="row marketing">
             <div class="col-sm-6">
-                <h4>Listen Back</h4>
-                <p>If you're not sure where to drop your chapter markers, listen back in Podcast Chapters. Adding a new chapter marker will drop it automatically at your current position.</p>
+                <h4><a href="https://github.com/Podcastindex-org/podcast-namespace/blob/main/docs/1.0.md"><img alt="Podcasting 2.0 Certified" title="Podcasting 2.0 Certified" src="./images/podcastindex-namespace-final.svg"></a></h4>
+                <p>Enter and export data for the <a href="https://github.com/Podcastindex-org/podcast-namespace/blob/main/docs/1.0.md">podcast namespace</a> RSS tags. <a href="./faq/pc20.html">Read more here</a>.</p>
             </div>
             <div class="visible-xs"><br></div>
             <div class="col-sm-6">
@@ -76,6 +76,10 @@
             <div class="col-sm-6">
                 <h4>Import And Export</h4>
                 <p>Import podcast data from automation-friendly <a href="./faq/csvImport.html">CSV files</a>. <a href="./faq/jsonExport.html">Export data as JSON</a>, including a web player if you so wish.</p>
+            </div>
+            <div class="col-sm-6">
+                <h4>Listen Back</h4>
+                <p>If you're not sure where to drop your chapter markers, listen back in Podcast Chapters. Adding a new chapter marker will drop it automatically at your current position.</p>
             </div>
         </div>
 
