--- a/faq/pc20.html
+++ b/faq/pc20.html
@@ -41,6 +41,7 @@
                 <ul>
                     <li>Season has a simple number, and optionally also a name to display instead of the number</li>
                     <li>Episode is much the same, but it's recommended to keep the display name very short (32 characters or less)</li>
+                    <li>Chapters is the URL of a chapters JSON file, like the ones you can export from this very app</li>
                     <li>People are participants in the episode. Apart from name (or alias), you can note their role in the episode, as well as a URL and a separate URL to an image</li>
                     <li>A soundbite is a nice clip from the episode. Currently, you simply select a chapter</li>
                     <li>Location has a descriptive text, as exact or fanciful as you like, and optionally GEO coordinates as well as an Open Street Map identifier. The button to the right simply opens Open Street Map in your browser to help you find coordinates if you want them</li>
