--- a/release-notes/index.html
+++ b/release-notes/index.html
@@ -30,6 +30,14 @@
         <hr>
          <div class="row marketing">
             <div class="col-sm-12">
+                <h3>Podcast Chapters 3.1<small>Released April 16, 2021</small></h3>
+                <ul>
+                    <li>You know what would make sense? It would make sense that an app all about podcast chapters could create a chapters tag for your RSS feed. That's now been added to the RSS window</li>
+                    <li>The RSS window has also gained its own toolbar button, to make it a bit more discoverable</li>
+                    <li>Added a tiny bit of animation when adding people and transcripts, again in the RSS windows</li>
+                </ul>
+            </div>
+            <div class="col-sm-12">
                 <h3>Podcast Chapters 3.0<small>Released April 04, 2021</small></h3>
                 <ul>
                     <li>Podcast Chapters is now Podcasting 2.0 certified! Use the new window "RSS Tags" to generate metadata for your RSS feed following the <a href="https://github.com/Podcastindex-org/podcast-namespace/blob/main/docs/1.0.md">podcast namespace</a> specification. <a href="../faq/pc20.html">Read more here</a>.</li>
