--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
                 <img src="images/download-on-mas.png" alt="Download on the Mac App Store" width="165px" height="40px" />
             </a></p>
             <br>
-            <p>Podcast Chapters is free for up to three chapters. Try it out, use it for as many podcasts as you like. If you need more than three chapters, or just enjoy the app and want to support it, unlocking unlimited chapters is a one-time in-app purchase.
+            <p>Podcast Chapters is free for up to ten chapters. Try it out, use it for as many podcasts as you like. If you need more than ten chapters, or just enjoy the app and want to support it, unlocking unlimited chapters is a one-time in-app purchase.</p>
+            <!-- <p>Podcast Chapters is a nice old-fashioned one-time purchase in the Mac App Store. No in-app purchases, no strange freemium models. Oh, and pretty good support, if I dare say so myself.</p> -->
         </div>
 
         <hr><br>
