--- a/release-notes/index.html
+++ b/release-notes/index.html
@@ -30,6 +30,12 @@
         <hr>
          <div class="row marketing">
             <div class="col-sm-12">
+                <h3>Podcast Chapters 3.2<small>Released April 18, 2021</small></h3>
+                <ul>
+                    <li>Bumped the number of chapters to ten in the free version, so that you can better try out the app before deciding whether to purchase or not.</li>
+                </ul>
+            </div>
+            <div class="col-sm-12">
                 <h3>Podcast Chapters 3.1<small>Released April 16, 2021</small></h3>
                 <ul>
                     <li>You know what would make sense? It would make sense that an app all about podcast chapters could create a chapters tag for your RSS feed. That's now been added to the RSS window</li>
